# FileTransferApp_Visual_studio

./: CMakeLists.txt  README.md
FileTransferApp/: CMakeLists.txt  RCa11404  RCa13052  app.rc  checksum.cpp  checksum.h  main.cpp  network.cpp  network.h  resource.h
